Add generating voice message