@@ -4,4 +4,4 @@ ARG JAR_FILE=build/libs/*.jar
 
 COPY ${JAR_FILE} app.jar
 
-ENTRYPOINT ["java","-Dspring.profiles.active=release","-jar","/app.jar"]
+ENTRYPOINT ["java","-Dspring.profiles.active=release","--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED","-jar","/app.jar"]
